Revision history for Perl extension Text-Markup.

0.23
     - Added BBcode and Creole to the module description.
     - Fixed a failing test for the Mediawiki format due to a change in CGI
       v4.14. This reverses the workaround required by CGI 4.11, introduced in
       v0.20. Not that you care. It's just a test change.

0.22  2015-02-20T03:52:36Z
     - Added support for Creole. Thanks to Lucas Kanashiro for the patch!

0.21  2015-02-17T00:18:20Z
     - Fixed description of Asciidoc and added it to the README.
     - Added support for BBcode. Thanks to Lucas Kanashiro for the patch!

0.20   2015-01-22T00:54:50Z
     - Fixed a failing test for the Mediawiki format due to a change in CGI
       v4.11. Thanks to Andreas Koenig for the report and diagnosis.

0.19  2014-02-07T04:00:56Z
     - Fixed Pod markup so that it does not strip text from the first line of
       verbatim blocks.
     - Removed the `--safe` option from Asciidoc. It is just borked with the
       XHTML back end.

0.18  2013-06-08T23:24:09Z
     - Now require HTML::Tagset, since Text::MediawikiFormat seems to need it
       but only recommends it.
     - Removed all Pod tests from the distribution.
     - Updated reST to support docutils 0.7 - 0.10 and when Pygments is not
       available. Daniele Varrazzo.

0.17  2012-02-28T04:31:07Z
     - Added Asciidoc support.

0.16  2012-02-13T17:23:00Z
     - Rest support now uses its own implementation of `rst2html` so that it
       can render specialized reST documents, such as Sphinx files, in a more
       forgiving way: it preserves the content of unknown directives while not
       emulating specialized rendering. Written by Daniele Varrazzo.
     - Improved handling of Sphinx directives in Rest output. Most directives
       are stripped out, although `function` directives now turn out much
       nicer. Props to Daniele Varrazzo for the work on the Rest parser.
     - Fixed character encoding issues with the Rest parser.