@@ -14,11 +14,7 @@ sub parser {
     my $p = Pod::Simple::XHTML->new;
     # Output everything as UTF-8.
     $p->html_header_tags('<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />');
-    $p->strip_verbatim_indent(sub {
-        my $lines = shift;
-        (my $i = $lines->[0]) =~ s/\S.*//;
-        return $i;
-    });
+    $p->strip_verbatim_indent(sub { (sort map { /^(\s+)/ } @{$_[0]})[0] });
     $p->output_string(\my $html);
     # Want user supplied options to override even these default behaviors,
     # if necessary
